
message RemoveShape
{
	optional uint32 shapeID= 1;					//delete shapeId

}